extras/opa2.yml
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: "mayank1"
  namespace: "suman1"
spec:
  selector:
    matchLabels:
      app: mayank
  mtls:
    mode: STRICT
  portLevelMtls:
    80:
      mode: DISABLE
