extras/istio.yml
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "mayank"
spec:
  host: "mayank.suman1.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
